; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_socket_ssl.c_ssl_socket_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_socket_ssl.c_ssl_socket_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssl_state = type { i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ssl_socket_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ssl_state*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.ssl_state*
  store %struct.ssl_state* %5, %struct.ssl_state** %3, align 8
  %6 = load %struct.ssl_state*, %struct.ssl_state** %3, align 8
  %7 = icmp ne %struct.ssl_state* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %24

9:                                                ; preds = %1
  %10 = load %struct.ssl_state*, %struct.ssl_state** %3, align 8
  %11 = getelementptr inbounds %struct.ssl_state, %struct.ssl_state* %10, i32 0, i32 4
  %12 = call i32 @mbedtls_ssl_free(i32* %11)
  %13 = load %struct.ssl_state*, %struct.ssl_state** %3, align 8
  %14 = getelementptr inbounds %struct.ssl_state, %struct.ssl_state* %13, i32 0, i32 3
  %15 = call i32 @mbedtls_ssl_config_free(i32* %14)
  %16 = load %struct.ssl_state*, %struct.ssl_state** %3, align 8
  %17 = getelementptr inbounds %struct.ssl_state, %struct.ssl_state* %16, i32 0, i32 2
  %18 = call i32 @mbedtls_ctr_drbg_free(i32* %17)
  %19 = load %struct.ssl_state*, %struct.ssl_state** %3, align 8
  %20 = getelementptr inbounds %struct.ssl_state, %struct.ssl_state* %19, i32 0, i32 1
  %21 = call i32 @mbedtls_entropy_free(i32* %20)
  %22 = load %struct.ssl_state*, %struct.ssl_state** %3, align 8
  %23 = call i32 @free(%struct.ssl_state* %22)
  br label %24

24:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @mbedtls_ssl_free(i32*) #1

declare dso_local i32 @mbedtls_ssl_config_free(i32*) #1

declare dso_local i32 @mbedtls_ctr_drbg_free(i32*) #1

declare dso_local i32 @mbedtls_entropy_free(i32*) #1

declare dso_local i32 @free(%struct.ssl_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
